--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <body>
     <p>This is my page</p>
     <a href="boxopendirect://file?id=205714632865">Click this</a>
+    <p>Just open the app</p>
+    <a href="boxopendirect">Click this</a>
   </body>
 </html>
