--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <a href="boxopendirect://file?id=205714632865">Click this</a>
     <p>Just open the app</p>
     <a href="boxopendirect">Click this</a>
+    <p>Boxemm link</p>
+    <a href="boxemm://file?id=205714632865">Click this</a>
   </body>
 </html>
