--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="boxopendirect">Click this</a>
     <p>Boxemm link</p>
     <a href="boxemm://file?id=205714632865">Click this</a>
+    <p>Try opening boxemm</p>
+    <a href="boxemm://">Click this</a>
   </body>
 </html>
