--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <div id="id2" onclick="onClick('boxemm://file?id=205714632865')">
       Click me to open the file
     </div>
+    <p>Check Pallavi's document file id</p>
+    <a href="boxemm://file?id=205717117244">Click this</a>
   </body>
 </html>
